--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     height:fit-content;
     background-image:url("../images/crossline-lines.png");
     padding-top:20px;
+    border-bottom: solid 4px #4aaaa5;
 }
 
 #selfPortrait {
@@ -38,4 +39,15 @@ h5.card-title {
 #submitButton {
     background-color:#4aaaa5;
     border-color:#4aaaa5;
+}
+
+.container-fluid {
+    background-color:#777777;
+    height:200px;
+    text-align:center;
+}
+
+.container-fluid p {
+    padding-top:15px;
+    color: #ffffff;
 }
